# rubrum-swisseph_rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
examples/: unknown_web.rs
examples/unknown_web/: README.md
examples/unknown_web/web/: .gitignore  Trunk.toml  index.html  main.js  release.sh
examples/unknown_web/web/assets/: manifest.json
src/: lib.rs  main.rs
src/adapter/: body.rs  calc.rs  error.rs  house_system.rs  houses.rs  mod.rs  util.rs  zodiac.rs
tests/: adapter_conversions.rs
